Created empty functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="row mx-0">
             <div class="col-12 col-md-3 col-lg-3 p-2">
                 <h2>Search for a City:</h2>
-                <input type="text" class="form-control city-input" id="search" placeholder="Search">
+                <input type="text" class="form-control" id="search" placeholder="Search">
                 <button class="btn btn-block btn-primary search-btn">Search</button>
                 <hr>
                 <div class="searched-places"></div>
