Added basic fetch for weather and created components to display data in html

--- a/index.html
+++ b/index.html
@@ -14,16 +14,57 @@
     </header>
     <main>
         <section class="row mx-0">
-            <div class="col-12 col-md-3 col-lg-3 p-2">
+            <div class="col-12 col-md-3 p-3">
                 <h2>Search for a City:</h2>
                 <input type="text" class="form-control" id="search" placeholder="Search">
                 <button class="btn btn-block btn-primary search-btn">Search</button>
                 <hr>
                 <div class="searched-places"></div>
             </div>
-            <div class="col-12 col-md-9 col-lg-9 p-2">
-                <div class="weather-today"></div>
-                <div class="weather-5day"></div>
+            <div class="col-12 col-md-9 p-3">
+                <div class="weather-today card border-dark mb-3">
+                    <div class="card-body text-dark">
+                        <h5 class="card-title">Success card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="row justify-content-between weather-5day mx-0">
+                    <div class="card text-white bg-secondary mb-3 day1" style="max-width: 15rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Secondary card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card text-white bg-secondary mb-3 day2" style="max-width: 15rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Secondary card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card text-white bg-secondary mb-3 day3" style="max-width: 15rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Secondary card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card text-white bg-secondary mb-3 day4" style="max-width: 15rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Secondary card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card text-white bg-secondary mb-3 day5" style="max-width: 15rem;">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                          <h5 class="card-title">Secondary card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
     <script src="script.js"></script>
