--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
             </div>
             <div class="col-12 col-md-9 p-3">
                 <div class="weather-today card border-dark mb-3">
-                    <div class="card-body text-dark">
-                        <h5 class="card-title">Success card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="today-content card-body text-dark">
                     </div>
                 </div>
-                <div class="row justify-content-between weather-5day mx-0">
+                <div class="display row justify-content-between weather-5day mx-0">
                     <div class="card text-white bg-secondary mb-3 day1" style="max-width: 15rem;">
                         <div class="card-header">Header</div>
                         <div class="card-body">
@@ -67,6 +65,16 @@
                 </div>
         </section>
     </main>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
 </body>
 </html>
