Added code for the 5 future days forecast and local storage of the city entered

--- a/index.html
+++ b/index.html
@@ -27,40 +27,15 @@
                     </div>
                 </div>
                 <div class="display row justify-content-between weather-5day mx-0">
-                    <div class="card text-white bg-secondary mb-3 day1" style="max-width: 15rem;">
-                        <div class="card-header">Header</div>
-                        <div class="card-body">
-                          <h5 class="card-title">Secondary card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card text-white bg-secondary mb-3" id="day1" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3 day2" style="max-width: 15rem;">
-                        <div class="card-header">Header</div>
-                        <div class="card-body">
-                          <h5 class="card-title">Secondary card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card text-white bg-secondary mb-3" id="day2" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3 day3" style="max-width: 15rem;">
-                        <div class="card-header">Header</div>
-                        <div class="card-body">
-                          <h5 class="card-title">Secondary card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card text-white bg-secondary mb-3" id="day3" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3 day4" style="max-width: 15rem;">
-                        <div class="card-header">Header</div>
-                        <div class="card-body">
-                          <h5 class="card-title">Secondary card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card text-white bg-secondary mb-3" id="day4" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3 day5" style="max-width: 15rem;">
-                        <div class="card-header">Header</div>
-                        <div class="card-body">
-                          <h5 class="card-title">Secondary card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
+                    <div class="card text-white bg-secondary mb-3" id="day5" style="max-width: 15rem;">
                     </div>
                 </div>
         </section>
