Changed API for today's weather and changed forecast to show as of noon instead of midnight. Also cleaned HTML a bit

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                     </div>
                 </div>
                 <div class="display row justify-content-between weather-5day mx-0">
-                    <div class="card text-white bg-secondary mb-3" id="day1" style="max-width: 15rem;">
+                    <div class="card text-white bg-secondary mb-3" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3" id="day2" style="max-width: 15rem;">
+                    <div class="card text-white bg-secondary mb-3" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3" id="day3" style="max-width: 15rem;">
+                    <div class="card text-white bg-secondary mb-3" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3" id="day4" style="max-width: 15rem;">
+                    <div class="card text-white bg-secondary mb-3" style="max-width: 15rem;">
                     </div>
-                    <div class="card text-white bg-secondary mb-3" id="day5" style="max-width: 15rem;">
+                    <div class="card text-white bg-secondary mb-3" style="max-width: 15rem;">
                     </div>
                 </div>
         </section>
